--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,7 @@ APP_PORT=80
 # MONGODB
 DB_HOST=mongodb://localhost
 DB_PORT=27017
+
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=r00t
+MONGO_INIT_DB_NAME=trello
