--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,16 @@ services:
         ports:
             - "${APP_PORT}:80"
         restart: always
+        depends_on:
+          - mongodb
 
     mongodb:
-        image: mongo:3-xenial
+        image: mongo:4.2
+        command: mongod --auth
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: "${MONGO_INITDB_ROOT_USERNAME}"
+            MONGO_INITDB_ROOT_PASSWORD: "${MONGO_INITDB_ROOT_PASSWORD}"
+        volumes:
+            - ./.data:/data/db
         ports:
-            - "${DB_PORT}:80"
+            - "${DB_PORT}:27017"
