--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "node.js on docker",
   "author": "I am <i@am.com>",
-  "license": "none",
+  "license": "UNLICENSED",
   "main": "app.ts",
   "scripts": {
-    "start": "yarn install && nodemon servers/app.ts"
+    "start": "yarn install && nodemon servers/app.ts",
+    "test:lint": "eslint src/ --ext=ts  --fix"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,7 +17,13 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.26",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
+    "prettier": "2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
